Fixed footer spacing to persist across all pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,12 +10,11 @@ html, body{
 
 .App {
     font-family: "Raleway", sans-serif;
-    height: 100%;
+    min-height: 100vh;
     position: relative;
-    padding-bottom: 5em;
 }
 
 hr {
     width: 100%;
-    margin: 3em 0;
+    margin: 3rem 0;
 }
