--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -37,7 +37,6 @@
         width: 90%;
         display: flex;
         flex-direction: column;
-        padding-bottom: 5em;
         .TextSection {
             .QuoteLeft {
                 display: grid;
