--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2,9 +2,12 @@
 @import "../utilities/variables";
 
 .PageStyles {
+    padding-bottom: 5rem;
+    /*
     .PageImg {
         // Adds gradient to bottom of page pictures
-        //mask-image: linear-gradient(to top, transparent 0%, white 100%);
-        //box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+        mask-image: linear-gradient(to top, transparent 0%, white 100%);
+        box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
     }
+    */
 }
